# scrive-prelude

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  fourmolu.yaml  scrive-prelude.cabal
.github/workflows/: build.yaml  formatting.yaml  haskell-ci.yml
src/: Prelude.hs
