cabal-version: 3.0
name:          scrive-prelude
version:       1.0.3.1
author:        Scrive AB
maintainer:    Scrive AB
copyright:     2021
stability:     Experimental
category:      Web
synopsis:      Prelude for scrive
description:
  This is Scrive's common collection of imports and helper functions.

license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

tested-with: GHC == { 8.10.7, 9.0.2, 9.2.2, 9.4.8, 9.6.6, 9.8.2, 9.10.1 }

common common-stanza
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PatternGuards
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

library
  import:           common-stanza
  hs-source-dirs:   src
  ghc-options:
    -Wall -Wincomplete-record-updates -Wredundant-constraints -Wunused-packages

  if impl(ghc >= 9.8)
     ghc-options: -Wno-x-partial
  else
     ghc-options: -Wno-dodgy-imports

  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls
  exposed-modules:  Prelude
  build-depends:
    , base <5
    , cond
    , exceptions
    , extra
    , fields-json
    , hpqtypes
    , optics
    , pretty-simple
    , text
